# File_Zipper_Applied_Data_Structures_Project

./: ADS paper .tex  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BitStream.cpp  BitStream.h  CMakeCache.txt  CMakeLists.txt  DynamicArray.h  File_Zipper_Applied_Data_Structures_Project.sln  File_Zipper_Applied_Data_Structures_Project.vcxproj  File_Zipper_Applied_Data_Structures_Project.vcxproj.filters  HashMap.cpp  HashMap.h  HuffmanNode.cpp  HuffmanNode.h  MinHeap.cpp  MinHeap.h  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  test1.txt  test2.txt
Code_Library/: BitStream.cpp  BitStream.h  CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  HashMap.cpp  HashMap.h  HuffmanNode.cpp  HuffmanNode.h  HuffmanZipper.cpp  HuffmanZipper.h  MinHeap.cpp  MinHeap.h  MiniHeap.cpp  MiniHeap.h  main.cpp
Google_tests/: CMakeLists.txt  HuffmanZipperTest.cpp
